# TomoLearn

./: .cproject  .gitignore  .project  CMakeLists.txt  CUDAinstall.md  README.md  main.cpp
Phantoms/: genRectangle.m  genSheppLogan.m  genSheppLogan.m~  genSingleEllipse.m  testRAdon.m
TomoLearnS/: CMakeLists.txt  CTScan.cpp  CTScan.hpp  FBPReconst.hpp  Filter.cpp  Filter.hpp  Gen1CT.cpp  Gen1CT.hpp  Object2D.cpp  Object2D.hpp  Phantom.cpp  Phantom.hpp  Reconst.hpp
benchmarks/: CMakeLists.txt
benchmarks/src/: bench_rayDrProj.cpp
cmake/: CompilerWarnings.cmake  Doxygen.cmake  Sanitizers.cmake
matplotlibcpp/: matplotlibcpp.h  matplotlibcpp_old.h
mscriptsd/: MLEM.m  MLEM_rand.m  fbp.m
tests/: CMakeLists.txt
tests/src/: main.cpp  testCudaCompile.cpp  testFBP.cpp  testHaoGaoCPU.cpp  testMLEM.cpp  testRadonTransform.cpp  testRayDrivenProj.cpp  testReconstructions.cpp  testSPS.cpp
tomoLearnLib/: CMakeLists.txt
tomoLearnLib/include/: CTScan.hpp  FBPReconst.hpp  Filter.hpp  Gen1CT.hpp  Object2D.hpp  Phantom.hpp  Reconst.hpp  cudaFunctions.cuh
tomoLearnLib/src/: CTScan.cpp  Filter.cpp  Gen1CT.cpp  Object2D.cpp  Phantom.cpp  Reconst.cpp  config.h.in  cudaFunctions.cu
